Minimum mods to build UHD for Android

--- a/host/CMakeLists.txt
+++ b/host/CMakeLists.txt
@@ -362,7 +362,9 @@ ENDIF(NOT CMAKE_MODULES_DIR)
 
 # UHDConfig.cmake needs UHD_LINK_LIST_STATIC set:
 LIST(APPEND UHD_LINK_LIST_STATIC "dl")
-LIST(APPEND UHD_LINK_LIST_STATIC "pthread")
+
+#LIST(APPEND UHD_LINK_LIST_STATIC "pthread")
+
 FOREACH(Boost_Comp ${BOOST_REQUIRED_COMPONENTS})
     IF(NOT ${Boost_Comp} STREQUAL "unit_test_framework")
         LIST(APPEND UHD_LINK_LIST_STATIC "boost_${Boost_Comp}")
